2006-01-10  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 2.19

	* lib/ypserv_conf.c (load_ypserv_conf): Don't ignore return value
	of fgets().
	* lib/securenets.c (load_securenets): Likewise.
	* revnetgroup/revnetgroup.c (main): Likewise.

	* ypserv/ypserv.c (main): Don't ignore return value of dup().
	* ypserv/server.c (ypproc_xfr_2_svc): Likewise.
	* rpc.ypxfrd/ypxfrd.c (main): Likewise.

	* makedbm/makedbm.c (create_file): Don't ignore return value of
	getline().

	* rpc.yppasswdd/update.c (update_files): Don't ignore return values
	of unlink() and chown().

	* rpc.yppasswdd/yppasswdd.c (main): Don't ignore return values of
	chdir() and dup().

	* ypserv/reg_slp.c (register_slp): Check if hostname is resolveable.

	* configure.in: Make -pie usage configureable.
	Based on patch by Urs Thuermann <urs@isnogud.escape.de>.

2005-09-02  Thorsten Kukuk  <kukuk@suse.de>

	* ypxfr/ypxfr.c (ypxfr): Clear response structures before usage.

2005-07-20  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.18

        * rpc.yppasswdd/update.c (external_update_env): Remove obsolete code.
	(external_update_pipe): Don't use buffer of fixed length.

        * lib/log_msg.c (log_msg): Use vsnprintf.

2005-05-31  Thorsten Kukuk  <kukuk@suse.de>

	* release vesion 2.17

	* lib/securenets.c (load_securenets): Fix debug output.

	* ypserv/server.c: Handle return value of 0 correct for is_valid().

2005-05-19  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.16

	* rpc.yppasswdd/yppasswdd.c (sig_child): Restore errno.
	* rpc.ypxfrd/ypxfrd.c (sig_child): Likewise.
	* yppush/yppush.c (sig_child): Likewise.
	Based on patch from Mark Brown <broonie@sirena.org.uk>

	* lib/compat.c (svc_getcaller): Fix return value.
	* revnetgroup/revnetgroup.c (insert_netgroup): Make static.
	* rpc.yppasswdd/yppasswd_xdr.c: Cast uid_t/gid_t to int.
	* rpc.ypxfrd/ypxfrd.c: Fix includes, use int on HPUX for
	getpeername.
	* rpc.ypxfrd/ypxfrd_server.c: Fix includes.